<resources>
    <string name="app_name">AiDiagnose</string>
    <string name="register">Rejestracja</string>
    <string name="register_succesfull">Success</string>
    <string name="back">Back</string>
    <string name="fill_register">Fill</string>
    <string name="email">Email</string>
    <string name="first_name">Imię</string>
    <string name="last_name">Nazwisko</string>
    <string name="enter_password">Hasło</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="pleaseLogin">Zaloguj się na swoje konto</string>
    <string name="password">Hasło</string>
    <string name="forgotten">Zapomniałem hasła</string>
    <string name="login">Zaloguj</string>
    <string name="username">Email</string>
    <string name="symptom_question">Co Ci dolega?</string>
    <string name="title_activity_maps">Map</string>
    <string name="specialization">Specjalizacje</string>
    <string name="patient">Pacjent</string>
    <string name="doctor">Doktor</string>
    <string name="pwz">PWZ</string>
    <string name="search">Szukaj</string>
    <string name="next_symptom">Następny objaw</string>
    <string name="visitList">Lista wizyt</string>
    <string name="ok">OK</string>
    <string name="notification">Zgłoszenie</string>
    <string name="add_comment">Dodaj komentarz...</string>
    <string name="invalid_empty_pass">Niepoprawne hasło</string>
    <string name="invalid_user">Niepoprawny email</string>
    <string name="account_not_found">Konto nie istnieje</string>
    <string name="invalid_data">Błędne dane logowania</string>
    <string name="account_not_activated">Konto jeszcze nieaktywne</string>
    <string name="error">Error</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="your_visits">Twoje wizyty</string>
    <string name="about">O aplikacji</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="send_visit">Umów wizytę</string>
    <string name="notification_list">Lista zgłoszeń</string>
    <string name="user_name">%1$s %2$s</string>
</resources>
