<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="plugow.aidiagnose.viewModel.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/registerBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="false"
        app:behavior_peekHeight="90dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <LinearLayout
            android:id="@+id/hiddenPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_panel"
            android:orientation="vertical"
            android:paddingEnd="48dp"
            android:paddingStart="48dp">

            <LinearLayout
                android:id="@+id/arrowRegister"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/registerArrowImageView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/arrow_up_icon" />

                <TextView
                    android:id="@+id/registerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/darkGray"
                    android:textStyle="bold" />

            </LinearLayout>



                <LinearLayout
                    android:id="@+id/registerEditLinear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="@{viewModel.registerVisibility ? View.VISIBLE : View.GONE}">

                    <Switch
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.switchText}"
                        android:layout_marginBottom="16dp"
                        android:onCheckedChanged="@{(switch, checked) -> viewModel.onSwitchChanged(checked)}"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        app:errorEnabled="@{viewModel.invalidEmailEnabled}"
                        app:errorText="@{viewModel.invalidEmail}"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/emailEditText"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/custom_edit_text"
                            android:ellipsize="start"
                            android:gravity="center_horizontal|center_vertical"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:onTextChanged="@{(text, start, before, count) -> viewModel.onEmailTextChanged()}"
                            android:text="@={viewModel.registerEmail}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        app:errorEnabled="@{viewModel.invalidNameEnabled}"
                        app:errorText="@{viewModel.invalidName}"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/firstNameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/custom_edit_text"
                            android:ellipsize="start"
                            android:gravity="center_horizontal|center_vertical"
                            android:hint="@string/first_name"
                            android:inputType="text"
                            android:onTextChanged="@{(text, start, before, count) -> viewModel.onFirstNameTextChanged()}"
                            android:text="@={viewModel.firstName}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lastNameError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        app:errorEnabled="@{viewModel.invalidLastNameEnabled}"
                        app:errorText="@{viewModel.invalidLastName}"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/lastNameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/custom_edit_text"
                            android:ellipsize="start"
                            android:gravity="center_horizontal|center_vertical"
                            android:hint="@string/last_name"
                            android:inputType="text"
                            android:onTextChanged="@{(text, start, before, count) -> viewModel.onLastNameTextChanged()}"
                            android:text="@={viewModel.lastName}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/firstPasswordError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        app:errorEnabled="@{viewModel.invalidFirstPassEnabled}"
                        app:errorText="@{viewModel.invalidFirstPass}"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/registerPassword"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/custom_edit_text"
                            android:ellipsize="start"
                            android:gravity="center_horizontal|center_vertical"
                            android:hint="@string/enter_password"
                            android:inputType="textPassword"
                            android:onTextChanged="@{(text, start, before, count) -> viewModel.onFirstPassTextChanged()}"
                            android:text="@={viewModel.registerPassword}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/secondPasswordError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="@{viewModel.invalidSecondPassEnabled}"
                        app:errorText="@{viewModel.invalidSecondPass}"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/secondRegisterPassword"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/custom_edit_text"
                            android:ellipsize="start"
                            android:gravity="center_horizontal|center_vertical"
                            android:hint="@string/repeat_password"
                            android:inputType="textPassword"
                            android:onTextChanged="@{(text, start, before, count) -> viewModel.onSecondPassTextChanged()}"
                            android:text="@={viewModel.registerRepeatPassword}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:visibility="@{viewModel.pwzVisibility ? View.VISIBLE : View.GONE}"
                        android:id="@+id/pwdError"
                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="@{viewModel.invalidPwzEnabled}"
                        app:errorText="@{viewModel.invalidPwz}"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/pwz"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/custom_edit_text"
                            android:ellipsize="start"
                            android:gravity="center_horizontal|center_vertical"
                            android:hint="@string/pwz"
                            android:inputType="textPassword"
                            android:onTextChanged="@{(text, start, before, count) -> viewModel.onPwzChanged()}"
                            android:text="@={viewModel.pwz}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/registerButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="48dp"
                        android:layout_marginBottom="48dp"
                        android:background="@drawable/login_button"
                        android:gravity="center"
                        android:onClick="@{() -> viewModel.registerButtonListener()}"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginRight="15dp"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter"
                            android:src="@drawable/reigster_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/register"
                            android:textAllCaps="true"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</layout>

