<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="plugow.aidiagnose.viewModel.LoginViewModel"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:paddingBottom="100dp">


                <RelativeLayout
                    android:id="@+id/logoProgressGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" >
                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="54dp"
                        android:src="@drawable/big_logo"
                        />
                    <ProgressBar
                        android:visibility="@{viewModel.progressVisibility ? View.VISIBLE : View.GONE}"
                        android:id="@+id/loginProgressBar"
                        android:layout_marginTop="54dp"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_centerInParent="true"/>
                </RelativeLayout>

                <TextView
                    android:visibility="@{viewModel.errorVisibility ? View.VISIBLE : View.GONE}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.errorMessage}"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logoProgressGroup"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:text="@string/pleaseLogin"
                    android:textAllCaps="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logoProgressGroup" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/nameError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:errorEnabled="@{viewModel.errorUsernameEnabled}"
                    app:errorText="@{viewModel.emptyUsername}"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView">

                    <EditText
                        android:enabled="@{viewModel.emailEnabled}"
                        android:id="@+id/usernameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/custom_edit_text"
                        android:ellipsize="start"
                        android:gravity="center_horizontal|center_vertical"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:onTextChanged="@{(text, start, before, count) -> viewModel.onUsernameTextChanged()}"
                        android:text="@={viewModel.email}" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:errorEnabled="@{viewModel.errorPasswordEnabled}"
                    app:errorText="@{viewModel.emptyPassword}"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameError">

                    <EditText
                        android:enabled="@{viewModel.passEnabled}"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/custom_edit_text"
                        android:ellipsize="start"
                        android:gravity="center_horizontal|center_vertical"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:onTextChanged="@{(text, start, before, count) -> viewModel.onPasswordTextChanged()}"
                        android:text="@={viewModel.password}"
                        android:textAllCaps="true" />
                </android.support.design.widget.TextInputLayout>


                <!--<LinearLayout-->
                    <!--android:id="@+id/forgottenPassword"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="8dp"-->
                    <!--android:gravity="center_horizontal|center_vertical"-->
                    <!--android:orientation="horizontal"-->
                    <!--app:layout_constraintEnd_toEndOf="parent"-->
                    <!--app:layout_constraintStart_toStartOf="parent"-->
                    <!--app:layout_constraintTop_toBottomOf="@+id/loginButton">-->

                    <!--<ImageView-->
                        <!--android:layout_width="20dp"-->
                        <!--android:layout_height="20dp"-->
                        <!--android:src="@drawable/password_icon" />-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/forgotten"-->
                        <!--android:textColor="@color/colorPrimary" />-->

                <!--</LinearLayout>-->


                <LinearLayout
                    android:enabled="@{viewModel.loginEnabled}"
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="84dp"
                    android:background="@drawable/login_button"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.loginButtonListener()}"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passError">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/login_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>


        <include
            layout="@layout/register_panel"
            tools:viewModel="@{viewModel}" />

    </android.support.design.widget.CoordinatorLayout>



</layout>
